# rs-portfolio

./: Cargo.toml  db_setup.sql  nginx.conf  package-lock.json  package.json  tailwind.css
assets/css/lib/: dual-range.css
assets/css/realestate/tenant/: sidebar.css
assets/js/: main.js
assets/js/lib/: dual-range.js
assets/js/realestate/home/: auth-modal.js  user-dropdown.js
assets/js/realestate/search/: search.js
assets/js/realestate/tenant/: sidebar.js
db/: public.sql
infra/dev/: .env.example  Dockerfile  docker-compose.yaml
infra/prod/: .env.example  Dockerfile  docker-compose.yaml
schema/: public.sql  realestate.sql
src/: lib.rs  main.rs  router.rs
src/common/: router.rs
src/common/constant/: mod.rs
src/common/controllers/: auth_c.rs  mod.rs  user_c.rs
src/common/middlewares/: auth_mw.rs  csrf_mw.rs  mod.rs
src/common/models/: mod.rs  state.rs  user_db.rs
src/common/utilities/: config.rs  db.rs  hash.rs  mod.rs  oauth.rs  redis.rs
src/common/views/: head_v.rs  mod.rs
src/common/views/ui/: auth_modal_v.rs  mod.rs
src/portfolio/: mod.rs  router.rs
src/portfolio/controllers/: home_c.rs  mod.rs  section_c.rs
src/portfolio/views/pages/: home_v.rs
src/portfolio/views/ui/: about_v.rs  mod.rs  nav_v.rs  project_v.rs  resume_v.rs  section_v.rs
src/real_estate/: mod.rs  router.rs
src/real_estate/constant/: mod.rs
src/real_estate/controllers/: home_c.rs  mod.rs  search_c.rs  tenant_c.rs
src/real_estate/views/pages/: home_v.rs  mod.rs  search_v.rs  tenant_v.rs
src/real_estate/views/ui/: mod.rs
(+14 files in other folders)
